--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
 .fa-circle-check {
   color: rgb(242, 121, 77);
 }
+.fa-circle-xmark {
+  margin-left: 10px;
+}
+
 body {
   background: linear-gradient(135deg, #1b3678, #49155f);
 }
@@ -48,7 +52,7 @@ body {
   border-radius: 30px;
   padding: 10px 20px;
 }
-.add-task button {
+.btn {
   background-color: rgb(242, 121, 77);
   color: white;
   width: 100px;
@@ -74,4 +78,24 @@ body {
 .task p {
   width: 100%;
   padding-inline: 10px;
+}
+
+.edit-task {
+  width: 100%;
+  background-color: rgb(224, 220, 220);
+  height: 60px;
+  border-style: solid;
+  padding: 10px 20px;
+  width: 100%;
+  border: 0;
+  outline: 0;
+}
+.edit-btn {
+  border: 0;
+  background-color: rgb(88, 197, 117);
+  color: white;
+  width: 100px;
+  height: 60px;
+  border-style: solid;
+  padding: 10px 20px;
 }
